index.css
* {
  color:white;
  font-family: "Arial", "sans-serif", sans-serif;
}

body {
  display: flex;
  flex-direction: column;
  min-width: 375px;
}

header {
  flex: 0 80px;
}


main {
  flex: 1 calc(100 - 110px);
  display: flex;
  flex-direction: column;
  align-items: center;
}

footer {
  flex: 0 30px;
  padding: 10px;
}

menu {
  flex: 1;
  display: flex;
  flex-direction: row !important;
  list-style: none;
}

.navbar-brand {
  padding-left: 0.3em;
}

menu .nav-item {
  padding: 0 0.3em;
  align-items: left;
}

footer a {
  float: right;
}

a#sin {
  border-radius: 5px;
}

a:link, a:visited {
  background-color: #ff88aa;
  color: white;
  padding: 14px 25px;
  border-radius: 5px;
  text-align: center;
  text-decoration: none;
  display: inline-block;
}

a:hover, a:active, a#active {
  background-color: #ffaacc;
}

button {
  background-color: #7700aa;
  color: white;
  padding: 14px 25px;
  border-radius: 5px;
  text-align: center;
  text-decoration: none;
  display: inline-block;
  border: none;
}

button:hover, button:active {
  background-color: #9922cc;
}

div#ctrl {
  text-align:center;
  width:480px;
}

.center {
  top: 50%;
  left: 50%;
  transform: translateX(-50%) translateY(-50%);
}

@media (max-height: 600px) {
  header {
      display: none;
  }
  footer {
      display: none;
  }
  main {
      flex: 1 100vh;
  }
}

